--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,60 +46,114 @@ nav {
   z-index: 1;
   padding-top: o;
 }
-.right ul{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 94px;
-    width: 720px;
-    justify-content: flex-end;
-
+.right ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 94px;
+  width: 720px;
+  justify-content: flex-end;
 }
-.right ul li{
+.right ul li {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  align-content: space-between;
+  margin: 30px;
+}
+.right ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-style: italic;
+  font-weight: 100;
+  letter-spacing: 2px;
+  font-size: 20px;
+  color: #222831;
+}
+
+.btn{
+    border: solid 1.5px #222831;
+    padding: 15px;
+}
+.btn:hover{
+    color: #eeeeee;
+    background-color: #222831;
+}
+main {
+  height: 100vh;
+  width: 1440px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.container-hero {
+  height: 100vh;
+  width: 100%;
+ 
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.foto-area {
+  height: 100vh;
+  width: 100%;
+  background-image: url("/assets/img/background-nav.jpg");
+  background-color: #222831;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  filter: blur(3px);
+  
+}
+.text-area {
+    height: 100%;
+    width: 100%;
+    transform: translate(1%, -60%);
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    flex-direction: column;
     align-items: center;
-    align-content: space-between;
-    margin: 30px;
+    justify-content: start;
+    
+  text-align: center;
+  position: relative;
+  align-items: center;
+  align-content: center;
+  color:#222831; 
+  
 
+  
+  
 }
-.right ul li a{
-    text-decoration: none;
+.text-area h1{
     text-transform: uppercase;
-    font-style:italic;
-    font-weight: 100;
+    font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 500;
+    text-align: center;
+    margin: 20px;
     letter-spacing: 2px;
-    font-size: 20px;
+}
+.text-area h3{
+    font-size: 22px;
+    margin: 20px;
+}
+.text-area button{
+    margin: 20px;
+    padding: 20px;
+    font-size: 22px;
+    text-transform: uppercase;
     color: #222831;
-    
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 3px;
+    border: solid 1px #222831;
+    background-color: transparent;
 }
-.right ul li a .btn{
-    border: 3px solid #222831
+.text-area button:hover{
+    background-color: #222831;
+    color: #eeeeee;
 }
-main{
-    height: 100vh;
-    width: 1440px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-.container-hero{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-.container-hero img{
-    display: flex;
-    height: 100vh;
-    width: 1440px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    
-}
-
