--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ main {
   font-weight: 500;
   text-align: center;
   line-height: 50px;
-  text-transform: lowercase;
+  
 
 }
 
@@ -257,7 +257,11 @@ main {
   color: #3c4048;
   padding: 2rem;
   position: relative;
+  font-size: 22px;
+  font-style: italic;
+  font-weight: 400;
 }
+
 
 .header::after {
   content: "";
